changed: name of db @ config file

--- a/config/config.sample.json
+++ b/config/config.sample.json
@@ -41,7 +41,7 @@
             "database" : {
                 "driver":       "mysql",
                 "host":         "localhost",
-                "database":     "slim_project",
+                "database":     "shuttle",
                 "username":     "root",
                 "password":     "",
                 "charset":      "utf8",
